# anonymization-python

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cosmian_anonymization/: __init__.py  anonymize.py  conversion_helper.py  date_helper.py  method_parser.py  noise_correlation.py  noise_parser.py
src/cosmian_anonymization/: anonymize.py  method_parser.py  noise_correlation.py  noise_parser.py
tests/: benchmark.py  test_anonymize.py
tests/data/: config_demo.json  data_demo.csv  sample_config.json  sample_data.csv
