[tool.poetry]
name = "cosmian-anonymization"
version = "1.0.0"
description = "Cosmian Anonymization library in Python"
authors = ["Hugo Rosenkranz-Costa <hugo.rosenkranz@cosmian.com>"]
readme = "README.md"
packages = [{include = "cosmian_anonymization"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0"
pyhumps = "^3.8"
python-dateutil = "^2.8"
cloudproof-py = "^4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pandas-stubs = "^2.0.1.230501"
types-python-dateutil = "^2.8.19.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cosmian-anonymize = "cosmian_anonymization.anonymize:cli"
